syntax = 'proto2';

package v1alpha1;

import "vendor/k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

message CoredumpEndpointList {
  // Standard list metadata.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // List of pods.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md
  repeated CoredumpEndpoint items = 2;
}

message CoredumpEndpoint {
  // Standard object's metadata.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Specification of the desired behavior of the pod.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#spec-and-status
  // +optional
  optional CoredumpEndpointSpec spec = 2;

  // Most recently observed status of the pod.
  // This data may not be up to date.
  // Populated by the system.
  // Read-only.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#spec-and-status
  // +optional
  optional CoredumpEndpointStatus status = 3;
}

message CoredumpEndpointSpec {
  optional string podUID = 1;
}

message CoredumpEndpointStatus {
}
