/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.WanLinghao.fujitsu_coredump.pkg.apis.coredump.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "sigs.k8s.io/apiserver-builder-alpha/pkg/builders/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// CoredumpEndpoint
// +k8s:openapi-gen=true
// +resource:path=coredumpendpoints,strategy=CoredumpEndpointStrategy
// +subresource:request=CoredumpEndpointDump,path=dump,kind=CoredumpEndpointDump
message CoredumpEndpoint {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional CoredumpEndpointSpec spec = 2;

  optional CoredumpEndpointStatus status = 3;
}

// +subresource-request
message CoredumpEndpointDump {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;
}

message CoredumpEndpointDumpList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated CoredumpEndpointDump items = 2;
}

message CoredumpEndpointList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated CoredumpEndpoint items = 2;
}

// CoredumpEndpointSpec defines the desired state of CoredumpEndpoint
message CoredumpEndpointSpec {
  optional string poduid = 1;
}

// CoredumpEndpointStatus defines the observed state of CoredumpEndpoint
message CoredumpEndpointStatus {
}

message CoredumpGetOptions {
  optional string container = 1;
}

